--- a/_posts/2016-06-25-Intrepid.md
+++ b/_posts/2016-06-25-Intrepid.md
@@ -1,9 +1,137 @@
 ---
 layout: post_layout
-title: Intrepid Sea, Air&Space Museum
+title: Tour of the Intrepid Sea,Air&Space Museum
 time: 2016年06月25日 Saturday
 location: 纽约
 pulished: true
 excerpt_separator: "```"
 ---
+
+Today I visit Intrepid Sea,Air&Space Museum with my friends. The tour is amazing! Actually I didn't expect too much at first because of the bad customer experience in my previous museum tour. This gigantic museum really gives me a big surprise! I think this should be one of the must visiting place in NY. 
+
+You can actually board the authentic aircraft carrier and submarine, then explore inside! It is super clean and filled with history cool stuff which are all kept in their vintage pristine condition. Plenty of pictures,videos and exhibits to read and experience. If you have any questions, the friendly helpful staff will help you. And on the deck of the aircraft carrier, there are a large collection of battle planes such as F15,F16,Migs. So many awesome stuff that drives you to another world which is completely different from the crazy Manhattan. It is necessary to wirte down this enjoryable educational tour and wonderful place.
+
+## Overview
+
+Intrepid Sea,Air&Space Museum consists of four parts, that is also why it carries this unwieldy long name:
+
+
+- **Intrepid aircraft carrier (Intrepid)**
+- **Authentic military aircraft (Air)**
+- **U.S. submarine Growler (Sea)**
+- **Space Shuttle Pavilion (Space)**
+
+>The Intrepid Sea, Air and Space Museum is the only museum where visitors can explore a legendary aircraft carrier, the first space shuttle, the world's fastest jets and a guided missile submarine. We thrill visitors of all ages and connect them to history through hands-on exploration, stories of heroism and firsthand accounts of the people who were there. As New York City's only educational institution housed on an aircraft carrier, we're advancing innovation by developing the next generation of leaders in science, technology engineering and math.
+
+## 1. Intrepid aircraft carrier
+
+This is my first time visiting a museum which is embeded in a decommissioned aircraft carrier. Look at this ginomous guy. Broad shoulders,slender waist! What a good shape! 
+<img src="/assets/img/Intrepid/IMG_8396.jpg" width="400px" />
+```
+
+>Launched in 1943, the former aircraft carrier USS Intrepid fought in World War II, surviving five kamikaze attacks and one torpedo strike. The ship later served in the Cold War and the Vietnam War. Intrepid also served as a NASA recovery vessel in the 1960s. It was decommissioned in 1974, and today is berthed on the Hudson River as the centerpiece of the Intrepid Sea, Air & Space Museum.
+
+Enter the hall, you will find a big model of the ship made out of Lego, 250,000 pieces! Marvellous! After that is the hangar deck. The planes in the following photos are only a small part of the hangar deck.
+<img src="/assets/img/Intrepid/IMG_8400.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8402.jpg" width="640px" />
+
+>PIASECKI HUP/UH-25 RETRIEVER:
+>This is a small, six-passenger helicopter. Its rotors overlap and are small enough to fit on aircraft carrier elevators without having to fold or collapse the rotor blades. For storage on carrier hangar decks the blades could easily be folded, making this helicopter a very small, flexible workhorse. The HUP was used mostly as a utility helicopter and aerial rescue-an electric onboard hoist and large floor hatch enabled a pilot to easily lift downed aviators.
+
+<img src="/assets/img/Intrepid/IMG_8405.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8407.jpg" width="640px" />
+
+>The A-4B Skyhawk displayed here was an attack aircraft flown off Intrepid during the Vietnam War. Other aircraft from the Vietnam War era are located on the flight deck.
+
+<img src="/assets/img/Intrepid/IMG_8419.png" width="400px" />
+
+>A-1 Skyraiders prepare to take off from Intrepid in August 1966. (Collection of the Intrepid Sea, Air & Space Museum. Gift of the family of Bill Qualter. P2014.120.60)
+
+<img src="/assets/img/Intrepid/IMG_8421.png" width="400px" />
+
+>Bombs from an A-4B Skyhawk in squadron VA-95, deployed with Intrepid, fall on a railroad bridge during an air strike over North Vietnam in September 1966. (National Archives and Records Administration)
+
+>[Introduction of Operation Rolling Thunder:(material from Intrepid Sea,Air&Space Museum)](http://www.intrepidmuseum.org/LatestNews/March-2016/March-2,-1965--Operation-Rolling-Thunder-Begins)
+>
+>Operation Rolling Thunder, a strategic bombing campaign against North Vietnam, began on March 2, 1965. The U.S. Air Force and the Navy carried out the campaign jointly. Intrepid and 14 other aircraft carriers participated in the bombing.
+>
+>The initial goal of Operation Rolling Thunder was persuasion. Through a measured increase in bombing intensity over time, the United States hoped to compel North Vietnam to stop supporting the Communist insurgency in the South. But efforts to bring an end to the fighting repeatedly failed. As Operation Rolling Thunder progressed, its objectives shifted toward crippling the North’s ability to fight and stopping the flow of supplies from North to South Vietnam
+>
+>In previous American wars, officials in Washington, including the president, trusted military commanders in the field to make strategic decisions. During the Vietnam War, their approach was dramatically different. Targets were selected and approved by a process that involved the Joint Chiefs of Staff, the State Department and President Johnson. Together they declared many targets, including Hanoi and Haiphong, to be off-limits, in part because they feared initiating a wider war with Communist China.
+>
+>The level of control was so comprehensive that even the number of aircraft and the types of weapons used were dictated from officials in Washington. This frustrated military commanders and pilots, including those on board Intrepid, who often felt that politicians prevented them from achieving military success in Vietnam. 
+
+
+<img src="/assets/img/Intrepid/IMG_8418.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8420.jpg" width="640px" />
+
+
+You can experience the 360 degree simulation ride in these interactive facilities.But these are not my cup fo tea. I am scared of rotation. But this interactive section is great for kids.
+
+<img src="/assets/img/Intrepid/IMG_8412.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8414.jpg" width="640px" />
+
+Then we enter the control room on the upper floor. Actually, most parts of the museum is vast and easy to navigate except the narrow and steep staircases.
+
+<img src="/assets/img/Intrepid/IMG_8426.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8428.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8431.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8434.jpg" width="640px" />
+
+>this escalator is so weird, haha
+
+This is the bridge of the ship, here you can see the buildings in Manhattan.
+
+<img src="/assets/img/Intrepid/IMG_8447.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8448.jpg" width="640px" />
+
+
+## 2. Authentic military aircraft
+
+Then we arrive at the flight deck, which is the top of the aircraft carrier where planes landed and took off from.
+<img src="/assets/img/Intrepid/IMG_8435.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8436.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8437.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8438.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8439.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8440.jpg" width="640px" />
+
+>This super cool black plane is Blackbird. The Lockheed A-12 Blackbird, on loan from the U.S. Air Force, joins the Intrepid Sea, Air & Space Museum’s aircraft collection in 1990. Designed in 1959 and initially flown in 1962, the Blackbird is the world’s first production aircraft to consistently fly well over three times the speed of sound and was used for the CIA’s secret surveillance missions.
+
+<img src="/assets/img/Intrepid/IMG_8445.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8446.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8478.jpg" width="640px" />
+
+## 3. U.S. submarine Growler
+The long narrow hallways and tight bunk beds with only enough space to roll in and lay down are really impressive. How can people live in such a tiny space! Imagine how hard the sailors' life is when they are out in the sea!
+<img src="/assets/img/Intrepid/IMG_8463.jpg" width="640px" />
+
+>The submarine Growler opens to the public at the Intrepid Sea, Air & Space Museum. Commissioned in 1958, Growler is the only surviving example of a strategic diesel-powered submarine that fired nuclear missiles.
+
+<img src="/assets/img/Intrepid/IMG_8465.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8467.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8468.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8472.jpg" width="640px" />
+
+
+## 4. Space Shuttle Pavilion
+
+Although you are not allowed to walk inside it, you can go under and around it to see this giant space shuttle. There are lots of history and information in the Space Shuttle Pavilion as well.
+<img src="/assets/img/Intrepid/IMG_8451.jpg" width="640px" />
+
+We are not allowed to walk in the Concorde. So we take a rest under the shadow of it,haha.
+
+<img src="/assets/img/Intrepid/IMG_8461.jpg" width="640px" />
+
+>The Concorde, a supersonic passenger airplane owned by British Airways, joins the Intrepid Museum collection in 2003. Concordes outflew world time zones, crossing the Atlantic in under three hours, or less than half the time of any other jetliner flying the Atlantic even today.
+
+## 5.Postscript
+
+Today is a sunny day and super hot! After the "steel beach" tour, we decided to take a rest in the bar nearby. We order a pitcher of draft beer while enjoying the UEFA European Championship. I love the ideal taste of the draft beer, the fragrance of wheat! 
+<img src="/assets/img/Intrepid/IMG_8476.jpg" width="640px" />
+<img src="/assets/img/Intrepid/IMG_8474.jpg" width="640px" />
+
+## 6.Reference
+
+Wikipedia and Intrepid Sea,Air&Space Museum(http://www.intrepidmuseum.org/)
 
